--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Run Update Script
         env:
           KAYA_TOKEN: ${{ secrets.KAYA_TOKEN }}
+          GYM_ID: ${{ vars.GYM_ID || '51' }}
+          GYM_NAME: ${{ vars.GYM_NAME || 'Dogpatch Boulders' }}
         run: python update.py
 
       - name: Commit and Push changes
